--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,3 @@
 WALLET=<Your wallet address>
 ETHERSCAN_APIKEY=<Your etherscan api key>
-SPENT=<Your spendings to calculate accurate profits, later this will calculate automaticly>
-OHM_PURCHASED=<Amount of ohms purchased>
+RPC_URL=<ethereum RPC url>
