--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "big.js": "^6.1.1",
     "chalk": "^4.1.2",
     "dotenv": "^10.0.0",
     "ethers": "^5.4.4",
